Fixing legend overflow

--- a/static/_sass/base/_forms.scss
+++ b/static/_sass/base/_forms.scss
@@ -5,6 +5,10 @@ fieldset {
   padding: 0;
 }
 
+legend {
+  width: 100%;
+}
+
 input,
 label,
 select {
